syntax = "proto3";

package confidence.flags.resolver.v1;

import "google/api/resource.proto";
import "google/api/annotations.proto";
import "google/api/field_behavior.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";

import "confidence/api/annotations.proto";
import "confidence/flags/types/v1/types.proto";
import "confidence/flags/resolver/v1/types.proto";
import "confidence/flags/resolver/v1/api.proto";

import "confidence/shared/v1/materialization_operations.proto";

option java_package = "com.spotify.confidence.flags.resolver.v1";
option java_multiple_files = true;
option java_outer_classname = "WasmApiProto";


message ResolveWithStickyRequest {
  ResolveFlagsRequest resolve_request = 1;

  // if a materialization info is missing, we want tor return to the caller immediately
  bool fail_fast_on_sticky = 3;
  // if we should support sticky or completely skip the flag if they had sticky rules
  bool not_process_sticky = 4;

  // Context about the materialization required for the resolve
  repeated confidence.shared.v1.ReadResult materializations = 5;
}


message ResolveWithStickyResponse {
  oneof resolve_result {
    Success success = 1;
    confidence.shared.v1.ReadOperationsRequest read_ops_request = 3;
  }
  
  message Success {
    ResolveFlagsResponse response = 1;
    repeated confidence.shared.v1.VariantData materialization_updates = 3;
  }
}


message LogMessage {
 string message = 1;
}
